Fix for board index not showing newly created board

--- a/app/assets/stylesheets/board_form.scss
+++ b/app/assets/stylesheets/board_form.scss
@@ -1,3 +1,17 @@
+.errors-create-board {
+    min-height: 25px;
+    color: blue;
+}
+
+.errors-create-board ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 10px;
+    line-height: 25px;
+}
+
 .create-board-form-container {
     display: flex;
     flex-direction: column;
@@ -19,7 +33,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 80px 30px 30px 30px;
+    padding: 30px;
 }
 
 .create-board-form > form {
@@ -33,7 +47,7 @@
 
 .submit-new-board {
     border: none;
-    padding: 10px 32px;
+    padding: 10px 22px;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
@@ -62,7 +76,8 @@
     padding: 10px;
     border-radius: 10px;
     border: 3px solid darkgrey;
-    margin: 0 5px;
+    margin: 0 10px;
+    font-size: 15px;
 }
 
 .form-board-title:focus {
